# Qt_project

./: .gitignore  CMakeLists.txt  LICENSE  infowidget.cpp  infowidget.h  lsystem.cpp  lsystem.h  lsystemprinter.cpp  lsystemprinter.h  lsystemwidget.cpp  lsystemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  setupwidget.cpp  setupwidget.h
resources/: Info.md
